--- a/main.html
+++ b/main.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h3 id="url"></h3>
+    <form id="form">
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" />
+      <label for="name">Graduation Year:</label>
+      <input type="number" name="year" id="year" />
+      <button type="submit" id="button">Submit</button>
+    </form>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
-
 </html>
